--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-h1 {
+body {
+    font-family: Anek Devanagari;
     text-align: center;
 }
 
@@ -16,6 +17,7 @@ img {
 #scoreboard {
     display: flex;
     justify-content: center;
+    font-size: 25px;
 }
 
 #scoreboard, div {
